# VibeLign

./: .cursorrules  .debug-journal.md  .gitignore  .vibelign_protected  AGENTS.md  AI_DEV_SYSTEM_SINGLE_FILE.md  AI_DEV_SYSTEM_SINGLE_FILE.md~  CHANGELOG.md  CLAUDE.md  CLI_GUI_COMPARISON.md  DESIGN.md  LICENSE  MANIFEST.in  MCP_dev.md  MIGRATION_v1_to_v2.md  OPENCODE.md  PROJECT_CONTEXT.md  PROJECT_DOC_STATUS.md  README.ko.md  README.md  VIBELIGN_MANUAL.md  VibeGuard_QUICKSTART.md  VibeLign-책-소개.md  VibeLign_QUICKSTART.md  opencode.json  pyproject.toml  setup.py  vib.spec  vibe_skill_up.md  vibelign_icon.af
.cursor/: mcp.json
.github/workflows/: build-wheels.yml  gui.yml  phase9-cross-platform.yml  publish.yml  python.yml
.omc/: project-memory.json
.omc/sessions/: 0136b7c4-53a4-4804-ab86-737125184215.json  11c6a2ef-71e8-4899-8aaa-f9238b3f607a.json  1eb1d09f-ca9f-41ae-9407-a81829040cc5.json  2d07c8ae-678a-463e-962c-8afb090ee6ec.json  2e6ff4da-5d25-4183-80b7-b6ac6e52536d.json  4458913a-fef3-4226-93f2-6eeac97390f3.json  49650bf3-110e-47fb-8fb7-846a708b85a3.json  5ec5f58e-5e84-4e50-9cc6-fd01113df80b.json  82d54760-9065-43d2-aabe-f5b20e651140.json  (+9 more)
.omo/: boulder.json
cache/: projects.json
docs/: MANUAL.md  TEST_REPORT.md  _config.yml  index.md
plans/: 2026-06-07-기획-세션-불러오기-구현계획.md  2026-06-07-기획방-마감-게이트-구현계획.md  2026-06-07-기획방-카드버튼-A2-구현계획.md  2026-06-07-기획방-카드흐름-A-구현계획.md  2026-06-08-기획방-역할-스왑-재설계-구현계획-4.md  2026-06-08-기획방-페르소나-모델-분리-구현계획-1-backend.md  2026-06-08-기획방-페르소나-모델-분리-구현계획-2-ui.md  2026-06-08-기획방-페르소나-모델-분리-구현계획-3-배지.md  2026-06-08-기획방-페르소나-모델-분리-구현계획-4-인라인편집.md  2026-06-08-기획방-폴백-사유-안내-구현계획-5.md  2026-06-10-강PD-UX-A안-빠른개선-구현계획.md  2026-06-10-강PD-UX-B안-3단계IA-설계.md  2026-06-10-강PD-UX-B안-구현계획.md  2026-06-10-강PD-가이드레이어-design.md  2026-06-10-강PD-가이드레이어-구현계획.md  2026-06-10-강PD-가이드레이어-목업.html  2026-06-10-강PD-펀딩리워드-상품기획.md  2026-06-11-계약트랙-design.md  2026-06-11-계약트랙-구현계획.md  2026-06-11-트라이얼-1장-design.md  2026-06-11-트라이얼-1장-구현계획.md  2026-06-12-실행해보기-run-preview-design.md  2026-06-12-작동검증-개선루프-design.md  2026-06-12-작동검증-개선루프-plan.md  2026-06-12-작업방-tier1-design.md  2026-06-13-PRB-스타일갤러리-design.md  2026-06-13-PRB-스타일갤러리-구현계획.md  2026-06-13-VibeLign-브루탈리즘-모션정제-design.md  2026-06-13-VibeLign-브루탈리즘-모션정제-구현계획.md  2026-06-13-디자인-프리뷰-design.md  2026-06-13-디자인-프리뷰-구현계획.md  2026-06-13-마스코트-가이드-네이티브-포팅-계획.md  2026-06-13-모션-차원-design.md  2026-06-13-모션-차원-구현계획.md  VibeLign-기획방개선-기획안.md  VibeLign-멀티AI-기획CLI-설계안.md  VibeLign-코알못UX-통합기획안.md  featplanning-create-planningconfigpy-global-config-reader-for-planning-personas.md  featplanning-task-2-create-planningconfigpy-global-config-reader-for-planning-personas.md  pr7-ulw-loop-continuation.md  (+15 more)
scripts/: install_bundled_engine.py  relabel_wheel.py  vendor_report_fonts.py
tests/: NOTES.md  test_action_executor.py  test_action_planner.py  test_ai_codespeak.py  test_ai_codespeak_prompt.py  test_ai_explain_prompt.py  test_anchor_alias_index.py  test_anchor_parser_bugs.py  test_anchor_span_compaction.py  test_anchor_suggestions.py  test_anchor_tools_v2.py  test_beginner_surface_docs.py  test_bench_patch_command.py  test_change_explainer_project_map.py  test_checkpoint_cmd_wrapper.py  test_checkpoint_engine_router.py  test_checkpoint_router_consumers.py  test_checkpoint_rust_engine.py  test_codespeak.py  test_context_chunk.py  test_core_model_exports.py  test_cross_platform_paths.py  test_distribution_metadata.py  test_doc_sources.py  test_doc_sources_cmd.py  test_docs_ai_enhance.py  test_docs_build_cmd.py  test_docs_enhance_heuristics.py  test_docs_visualizer.py  test_doctor_cmd_wrapper.py  test_doctor_fix_anchors.py  test_edge_anchor_tools.py  test_edge_change_explainer.py  test_edge_corrupt_metadata.py  test_edge_empty_project.py  test_edge_guard_none_fields.py  test_edge_init_permissions.py  test_edge_patch_codespeak.py  test_error_log.py  test_fast_tools.py  (+120 more)
vibeguard/: cli.py
vibelign/: __init__.py  __main__.py  _vib_entry.py  cli.py  mcp_server.py  terminal_render.py  vib_cli.py
vibelign-core/: Cargo.toml
vibelign-core/examples/: bench_engine_direct.rs  bench_tokenizer.rs  concurrency_smoke.rs  wire_smoke_phase3.rs
vibelign-core/src/: anchor_meta.rs  config.rs  constants.rs  lib.rs  main.rs  memory_audit.rs  memory_state.rs  project_scan.rs  score_path.rs  secret_scan.rs  tokenizer.rs
vibelign-core/src/backup/: cas.rs  checkpoint.rs  create.rs  db_maintenance.rs  db_viewer.rs  diff.rs  disk.rs  graph_summary.rs  hasher.rs  mod.rs  retention.rs  snapshot.rs  suggestions.rs
vibelign-core/src/backup/restore/: files.rs  full.rs  mod.rs  preview.rs
vibelign-core/src/db/: mod.rs  schema.rs
vibelign-core/src/ipc/: daemon.rs  handler.rs  mod.rs  protocol.rs
vibelign-core/src/security/: mod.rs  path_guard.rs
vibelign-gui/: .gitignore  PROJECT_CONTEXT.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
vibelign-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.updater.conf.json
vibelign-gui/src-tauri/.omc/state/: idle-notif-cooldown.json  last-tool-error.json
vibelign-gui/src-tauri/capabilities/: default.json
vibelign-gui/src-tauri/icons/: icon.icns
vibelign-gui/src-tauri/src/: code_access.rs  code_diff.rs  docs_access.rs  git_status.rs  lib.rs  main.rs  vib_path.rs
vibelign-gui/src-tauri/src/commands/: code.rs  design_preview.rs  design_preview_tests.rs  docs.rs  error_logs.rs  gui_error.rs  mod.rs  planning.rs  planning_chat.rs  planning_chat_cards.rs  planning_chat_contract.rs  planning_chat_markdown.rs  planning_chat_readiness.rs  planning_chat_retry.rs  planning_chat_store.rs  planning_chat_synthesis.rs  planning_chat_synthesis_tests.rs  planning_chat_trash.rs  planning_chat_types.rs  planning_persona.rs  planning_persona_context.rs  platform.rs  project_summary.rs  report_pdf.rs  report_pdf_tests.rs  report_render_payload.rs  run_preview.rs  settings.rs  tool_install.rs  vib_bridge.rs  watch.rs  work_room.rs
vibelign-gui/src-tauri/src/onboarding/: macos.rs  mod.rs  windows.rs
vibelign-gui/src-tauri/tests/: macos_helpers.rs
(+1603 files in other folders)
