[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelign"
version = "2.1.8"
description = "AI coding safety system for vibecoders"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{name = "yesonsys"}]
license = "MIT"
keywords = ["vibelign", "ai", "cli", "mcp", "developer-tools", "code-safety", "vibe-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["anthropic>=0.40.0", "rich>=13.9.0", "mcp>=1.0.0", "watchdog>=3.0.0", "typing_extensions>=4.0.0; python_version < '3.12'"]

[project.urls]
Homepage = "https://yesonsys03-web.github.io/VibeLign/"
Repository = "https://github.com/yesonsys03-web/VibeLign"
Documentation = "https://yesonsys03-web.github.io/VibeLign/"
Issues = "https://github.com/yesonsys03-web/VibeLign/issues"
Releases = "https://github.com/yesonsys03-web/VibeLign/releases"

[project.scripts]
vibelign = "vibelign.cli:main"
vib = "vibelign.cli.vib_cli:main"
vibelign-mcp = "vibelign.mcp.mcp_server:main"

[tool.setuptools.packages.find]
include = ["vibelign*"]
exclude = ["vibelign-gui*", "build*", "dist*", "promo*"]

[tool.setuptools.package-data]
vibelign = ["_bundled/vibelign-engine", "_bundled/vibelign-engine.exe", "_bundled/vibelign-engine.sha256", "_bundled/vibelign-engine.exe.sha256", "core/memory/*.schema.json", "core/recovery/*.schema.json"]

[tool.pyright]
exclude = [
    ".venv",
    ".vibelign",
    "build",
    "tests/benchmark",
    "vibelign-gui/src-tauri/target",
]
