[build-system]
requires = ["setuptools>=70.1", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelign"
version = "2.5.2"
description = "AI coding safety system for vibecoders"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{name = "yesonsys"}]
license = "MIT"
keywords = ["vibelign", "ai", "cli", "mcp", "developer-tools", "code-safety", "vibe-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["anthropic>=0.40.0", "rich>=13.9.0", "mcp>=1.0.0", "watchdog>=3.0.0", "typing_extensions>=4.0.0; python_version < '3.12'", "python-docx>=1.0", "python-pptx>=1.0", "pypdf>=4.0", "reportlab>=4.0"]

[project.optional-dependencies]
# 보고서 내보내기(python-docx/pptx/pypdf/reportlab)는 GUI 가 주력 사용처라 항상 필요하다.
# 따라서 base dependencies 로 승격했고, 어떤 설치 경로(dev uv-tool·PyInstaller 번들·pip)든
# 자동 포함된다 → "python-docx 가 필요합니다" 류 누락 버그 클래스 제거.
# 이 extra 는 기존 `pip install ".[report]"` 호출(gui.yml·build 스크립트) 호환을 위한 빈 별칭이다.
report = []

[project.urls]
Homepage = "https://yesonsys03-web.github.io/VibeLign/"
Repository = "https://github.com/yesonsys03-web/VibeLign"
Documentation = "https://yesonsys03-web.github.io/VibeLign/"
Issues = "https://github.com/yesonsys03-web/VibeLign/issues"
Releases = "https://github.com/yesonsys03-web/VibeLign/releases"

[project.scripts]
vibelign = "vibelign.cli:main"
vib = "vibelign.cli.vib_cli:main"
vibelign-mcp = "vibelign.mcp.mcp_server:main"

[tool.setuptools.packages.find]
include = ["vibelign", "vibelign.*"]
exclude = ["build*", "dist*", "promo*"]

[tool.setuptools.package-data]
vibelign = ["_bundled/vibelign-engine", "_bundled/vibelign-engine.exe", "_bundled/vibelign-engine.sha256", "_bundled/vibelign-engine.exe.sha256", "core/memory/*.schema.json", "core/recovery/*.schema.json", "core/reporting_cli/fonts/*/*.woff2", "core/reporting_cli/fonts/*/OFL.txt"]

[tool.pyright]
exclude = [
    ".venv",
    ".vibelign",
    "build",
    "tests/benchmark",
    "vibelign-gui/src-tauri/target",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
