[package]
name = "vibelign-core"
version = "2.1.5"
edition = "2021"

[[bin]]
name = "vibelign-engine"
path = "src/main.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
