[package]
name = "vibelign-core"
version = "2.2.15"
edition = "2021"

[lib]
name = "vibelign_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "vibelign-engine"
path = "src/main.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fs2 = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unicode-normalization = "0.1"
walkdir = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
