[package]
name = "vibelign-gui"
version = "2.5.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
updater = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibelign_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "data-url"] }
url = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tiny_http = "0.12"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
vibelign-core = { path = "../../vibelign-core" }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# 무인 PDF (계획 2b) — 네이티브 print-to-PDF. 버전은 wry 0.54.4 와 일치(ABI 충돌 방지).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError"] }
block2 = "0.6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"

# dev 빌드 디버그 심볼을 라인 정보만으로 제한해 target/debug 비대를 줄인다.
# 백트레이스(파일:줄)는 유지되고, 디버거의 전체 지역변수 검사만 제한된다.
[profile.dev]
debug = "line-tables-only"
